# rq-manager

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  startup.sh
api/: pyproject.toml
api/app/: app.py  asgi.py  cli.py  config.py  const.py  hooks.py
api/app/cli/: __init__.py  analytics.py  main.py
api/app/core/: handlers.py  redis.py
api/app/db/: __init__.py  models.py  repository.py
api/app/extensions/: exporter.py  scheduler.py
api/app/routes/: __init__.py  analytics.py  depends.py  health.py  jobs.py  metrics.py  queues.py  scheduled.py  schedulers.py  workers.py
api/app/schemas/: analytics.py  jobs.py  queues.py  scheduled.py  schedulers.py  workers.py
api/app/services/: jobs.py  queues.py  scheduled.py  schedulers.py  snapshots.py  workers.py
api/app/utils/: datetime_utils.py
api/sampler/: cli.py  main.py
front/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
front/src/: App.tsx  config.ts
front/src/components/: MetricCardChart.tsx
front/src/contexts/: SettingsContext.tsx
front/src/data/: mocks.tsx
front/src/hooks/: useRefreshInterval.ts
front/src/layout/: AppContent.tsx  AppLayout.tsx  AppThemeToggle.tsx  HealthIndicator.tsx
front/src/pages/Home/: HomeFailedJobs.tsx  HomeHeader.tsx  HomeQueueDepth.tsx  HomeQueueDetails.tsx  HomeRecentJobs.tsx  HomeStats.tsx  HomeWorkerStatus.tsx  HomeWorkerThroughput.tsx  TimePeriodSelector.tsx  index.tsx
front/src/pages/Jobs/: CreateJobModal.tsx  JobCard.tsx  JobDetailsDrawer.tsx  JobsTable.tsx  Pagination.tsx  SearchBar.tsx  index.tsx  jobUtils.ts  (+2 more)
front/src/routes/: AppRoutes.tsx  index.ts
front/src/services/: analyticsService.ts  dashboardService.ts  healthService.ts  jobsService.ts  queuesService.ts  schedulersService.ts  workersService.ts
front/src/styles/: main.css  theme.ts
front/src/utils/: api.ts  cache.ts  cronParser.ts  date.ts  formatters.ts  helpers.ts  http.tsx  notifications.ts  storage.ts
infra/grafana/: dashboard.json
infra/k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yml
infra/nginx/: nginx.conf  nginx.conf.template
(+27 files in other folders)
